# CCF

./: .gitignore  CMakeLists.txt
cmake/: common.cmake
doc/: index.rst
doc/architecture/performance/: analysis.rst  generator.rst  index.rst
doc/performance/: analysis.rst  generator.rst  index.rst  submitter.rst  what_is_perf.rst
getting_started/setup_vm/roles/perf-tool/tasks/: install.yml
getting_started/setup_vm/roles/perf-tool/vars/: common.yml
perf-system/: README.md  requirements.txt  run-login-perf.sh
perf-system/analyzer/: analysis.py  analyze_packages.py  analyzer.py  throughput_analysis.py
perf-system/generator/: loggin_generator.py  lskv_generator.py
perf-system/submitter/: CMakeLists.txt  handle_arguments.cpp  handle_arguments.hpp  submit.cpp  submit.py
scripts/: ci-checks.sh
src/clients/: rpc_tls_client.h
tests/: external_executor.py  tests.sh
tests/infra/: piccolo_driver.py
tests/perf-system/: README.md  Untitled.ipynb  concurrent_run.sh  requirements.txt  run-demo.sh  run-login-perf.sh
tests/perf-system/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/perf-system/analyzer/: analyze_packages.py  analyzer.py  commit_analysis.py  demo.py  demo_analysis.py  presentation_analysis.py  throughput_analysis.py
tests/perf-system/generator/: demo_generator.py  loggin_generator.py  lskv_generator.py
